--- a/src/InterfaceGraphique/CreerVol.form
+++ b/src/InterfaceGraphique/CreerVol.form
@@ -264,6 +264,9 @@
                   </StringArray>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="listevolsMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
