--- a/src/InterfaceGraphique/ErreurPersonne.form
+++ b/src/InterfaceGraphique/ErreurPersonne.form
@@ -82,7 +82,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="                         Mots de passe ne correspondent pas !"/>
+            <Property name="text" type="java.lang.String" value="                         Les mots de passe ne correspondent pas !"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
